--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-torch
-transformers
+fastapi==0.110.0
+requests==2.31.0
+python-multipart==0.0.9
+uvicorn==0.29.0
+faiss-cpu==1.7.3
+numpy==1.26.4
+textract==1.6.3
+PyMuPDF==1.24.1
+python-docx==1.1.0
+spacy==3.7.4
+sentence-transformers==2.5.1
