--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.110.0
 requests==2.31.0
 python-multipart==0.0.9
 uvicorn==0.29.0
-faiss-cpu==1.7.3
+faiss-cpu>=1.7.3
 numpy==1.26.4
 textract==1.6.3
 PyMuPDF==1.24.1
